--- a/templates/aboutdane.html
+++ b/templates/aboutdane.html
@@ -5,7 +5,7 @@
 <title>Dane Rules!</title>
 
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
 body {
@@ -17,6 +17,26 @@ body {
 
 h2 {text-align: center;}
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 100px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+
+
 </style>
 </head>
 <body>
@@ -27,10 +47,11 @@ h2 {text-align: center;}
     <img class="card-img-top" src="{{ url_for('static', filename='DaneV.jpg') }}" alt="Card image cap">
     <div class="card-body">
         <h5 class="card-title">A Bit About Me:</h5>
-        <p class="card-text">Im in the boyscouts and all the chicks dig me</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Im in the boyscouts and I play waterpolo</p>
+        <a href="https://www.instagram.com/dane.vestal/" class="fa fa-instagram"></a>
     </div>
 </div>
+
 
 </body>
 </html>
