--- a/templates/aboutdane.html
+++ b/templates/aboutdane.html
@@ -35,7 +35,10 @@ h2 {text-align: center;}
   color: white;
 }
 
-
+.fa-github {
+  background: #125688;
+  color: white;
+}
 
 </style>
 </head>
@@ -43,12 +46,13 @@ h2 {text-align: center;}
 
 <h2 style="background-color:DodgerBlue;">Dane "Awesomesauce" Vestal</h2>
 
-<div class="card" style="width: 18rem;">
+<div class="card text-center" style="width: 18rem;">
     <img class="card-img-top" src="{{ url_for('static', filename='DaneV.jpg') }}" alt="Card image cap">
     <div class="card-body">
         <h5 class="card-title">A Bit About Me:</h5>
         <p class="card-text">Im in the boyscouts and I play waterpolo</p>
         <a href="https://www.instagram.com/dane.vestal/" class="fa fa-instagram"></a>
+        <a href="https://github.com/D1935827V" class="fa fa-github"></a>
     </div>
 </div>
 
