--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
 
+<style>
+span {
+  background-color: #f18973;
+}
+
+h2 {text-align: center;}
+</style>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,11 +26,12 @@
         Group Members
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="/aboutdane">Dane Vestal</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="/aboutdane">Dane</a>
+        <a class="dropdown-item" href="#">Eva</a>
+        <a class="dropdown-item" href="#">Ida</a>
+        <a class="dropdown-item" href="#">Crystal</a>
+        <a class="dropdown-item" href="#">Nivu</a>
     </div>
-</div>
 
 <script src="https://threejs.org/build/three.js"></script>
 <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
@@ -39,7 +48,7 @@
     })
 </script>
 
-
+    <h2><span>P2 Trivia-Web</span></h2>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
