--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@ h2 {text-align: center;}
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="/aboutdane">Dane</a>
-        <a class="dropdown-item" href="#">Eva</a>
-        <a class="dropdown-item" href="#">Ida</a>
-        <a class="dropdown-item" href="#">Crystal</a>
-        <a class="dropdown-item" href="#">Nivu</a>
+        <a class="dropdown-item" href="/abouteva">Eva</a>
+        <a class="dropdown-item" href="/aboutida">Ida</a>
+        <a class="dropdown-item" href="/aboutcrystal">Crystal</a>
+        <a class="dropdown-item" href="/aboutnivu">Nivu</a>
     </div>
 
 <script src="https://threejs.org/build/three.js"></script>
