--- a/templates/aboutdane.html
+++ b/templates/aboutdane.html
@@ -56,6 +56,19 @@ h2 {text-align: center;}
     </div>
 </div>
 
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">10/09/2020</h5>
+        <p class="card-text">Worked on my Intelij playground and made journal in my about me page. I also figured out how to import images into my repository anu display them so I can use downloaded images and not just use their URLs.</p>
+    </div>
+</div>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">09/09/2020</h5>
+        <p class="card-text">I pulled from Github but somebody removed flask from the path so it didnt work and I created my playground so I could write code wothout it getting broken</p>
+    </div>
+</div>
+
 
 </body>
 </html>
