--- a/templates/aboutdane.html
+++ b/templates/aboutdane.html
@@ -65,7 +65,7 @@ h2 {text-align: center;}
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">09/09/2020</h5>
-        <p class="card-text">I pulled from Github but somebody removed flask from the path so it didnt work and I created my playground so I could write code wothout it getting broken</p>
+        <p class="card-text">I pulled from Github but somebody removed flask from the path so it didn't work and I created my playground so I could write code wothout it getting broken</p>
     </div>
 </div>
 
