--- a/templates/aboutdane.html
+++ b/templates/aboutdane.html
@@ -56,19 +56,40 @@ h2 {text-align: center;}
     </div>
 </div>
 
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">10/09/2020</h5>
-        <p class="card-text">Worked on my Intelij playground and made journal in my about me page. I also figured out how to import images into my repository anu display them so I can use downloaded images and not just use their URLs.</p>
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">10/30/2020</h5>
+                <p class="card-text">Started to practice arrays and worked on this weeks submission</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">10/29/2020</h5>
+                <p class="card-text">Worked on my Intelij playground and made journal in my about me page. I also figured out how to import images into my repository anu display them so I can use downloaded images and not just use their URLs.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">10/28/2020</h5>
+                <p class="card-text">I pulled from Github but somebody removed flask from the path so it didn't work and I created my playground so I could write code wothout it getting broken</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">10/27/2020</h5>
+                <p class="card-text">Reviewed Mr. Mortensons feedback on our project and fixed the layout, we had all the code but the way the website was layed out did not look good</p>
+            </div>
+        </div>
     </div>
 </div>
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">09/09/2020</h5>
-        <p class="card-text">I pulled from Github but somebody removed flask from the path so it didn't work and I created my playground so I could write code wothout it getting broken</p>
-    </div>
-</div>
-
 
 </body>
 </html>
