--- a/templates/abouteva.html
+++ b/templates/abouteva.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 
+<h1>Access Array Elements</h1>
+<script language="JavaScript">
+    // Create the array and fill it with data.
+    var Colors = ["Blue", "Green", "Purple"];
+    // Define a loop to access each array element
+    // and display it onscreen.
+    for (i = 0; i < Colors.length; i++)
+    {
+      document.write(
+        "Colors " + i + " = " +
+        Colors[i] + "<br />");
+    }
+  </script>
+
 </body>
 </html>
